Fixed Docu toggle position mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2076,7 +2076,7 @@ input[type="range"]:focus::-moz-range-thumb {
   }
 
   .toggle-documentation {
-    top: 6rem;
+    top: 10rem;
     left: 1.2rem;
   }
 
